manifests/minio.yaml
---
# Source: minio/templates/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: minio
  labels:
    app: minio
    chart: minio-8.0.10
    release: minio
    heritage: Helm
spec:
  type: ClusterIP
  ports:
    - name: http
      port: 9000
      protocol: TCP
      targetPort: 9000
  selector:
    app: minio
    release: minio
---
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: minio-ingress
  annotations:
    kubernetes.io/ingress.class: traefik
    external-dns.alpha.kubernetes.io/hostname: minio.alboroto.live
    external-dns.alpha.kubernetes.io/cloudflare-proxied: "true"
    cert-manager.io/cluster-issuer: letsencrypt-stg
    traefik.frontend.passHostHeader: "true"
    ingress.kubernetes.io/auth-url: http://authelia-service.istio-system.svc:80/api/verify?rd=https://auth.alboroto.live/
    traefik.ingress.kubernetes.io/router.middlewares: istio-system-authelia@kubernetescrd
    traefik.ingress.kubernetes.io/router.entrypoints: websecure
    # traefik.ingress.kubernetes.io/router.tls: "true"
    traefik.ingress.kubernetes.io/router.tls.certresolver: cloudflare
spec:
  tls:
    - secretName: authelia-ingress-tls # alboroto.live
      hosts:
        - minio.alboroto.live
  rules:
    - host: minio.alboroto.live
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: minio
                port:
                  number: 9000
---
# Source: minio/templates/deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: minio
  labels:
    app: minio
    chart: minio-8.0.10
    release: minio
    heritage: Helm
spec:
  strategy:
    type: RollingUpdate
    rollingUpdate:
      maxSurge: 100%
      maxUnavailable: 0
  selector:
    matchLabels:
      app: minio
      release: minio
  template:
    metadata:
      name: minio
      labels:
        app: minio
        release: minio
    spec:
      #affinity:
      #  nodeAffinity:
      #    requiredDuringSchedulingIgnoredDuringExecution:
      #      nodeSelectorTerms:
      #      - matchExpressions:
      #        - key: kubernetes.io/hostname
      #          operator: NotIn
      #          values:
      #          - knode1
      serviceAccountName: "minio"
      #securityContext:
      #  runAsUser: 1000
      #  runAsGroup: 1000
      #  fsGroup: 1000
      #  fsGroupChangePolicy: "OnRootMismatch"
      #initContainers:
      #- name: changeowner
      #  image: busybox
      #  command: ["sh", "-c", "chown -R 1000:1000 /export"]
      #  volumeMounts:
      #  - name: export
      #    mountPath: /export
      containers:
        - name: minio
          image: minio/minio:RELEASE.2021-09-03T03-56-13Z # "minio/minio:RELEASE.2021-02-14T04-01-33Z"
          imagePullPolicy: IfNotPresent
          command:
            - "/bin/sh"
            - "-ce"
            - "/usr/bin/docker-entrypoint.sh minio -S /etc/minio/certs/ server /export"
          volumeMounts:
            - name: export
              mountPath: /export            
          ports:
            - name: http
              containerPort: 9000
          resources:
            requests:
              memory: 4Gi      
      imagePullSecrets:
        - name: regcred
      volumes:
        - name: export
          persistentVolumeClaim:
            claimName: minio
